--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth-kit/react-router": "^4.0.2-alpha.10",
+    "axios": "^1.11.0",
     "react": "^19.1.0",
+    "react-auth-kit": "^4.0.2-alpha.10",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0"
   },
