--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@auth-kit/react-router": "^4.0.2-alpha.10",
     "axios": "^1.11.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-auth-kit": "^4.0.2-alpha.10",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.0"
+    "react-router": "^7.7.1",
+    "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
