--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.16.5",
+    "mongoose": "^8.17.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
