--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@auth-kit/react-router": "^4.0.2-alpha.10",
+    "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
-    "react-auth-kit": "^4.0.2-alpha.10",
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^7.7.1",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
