--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.7.1",
     "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.12",
