--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.542.0",
+    "mailgun.js": "^12.1.0",
     "mailtrap": "^4.2.0",
     "mongoose": "^8.18.0"
   },
