--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,22 @@
     "start": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@iconify/react": "^6.0.1",
     "@tailwindcss/vite": "^4.1.12",
-    "@vitejs/plugin-react": "^5.0.4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@vitejs/plugin-react": "^5.1.1",
+    "@vitest/ui": "^4.0.9",
     "axios": "^1.11.0",
     "backend": "file:..",
     "dotenv": "^17.2.1",
     "framer-motion": "^12.23.12",
+    "jsdom": "^27.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -24,6 +30,7 @@
     "react-router": "^7.7.1",
     "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.12",
+    "vitest": "^4.0.9",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
